--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   A personal blog about good things, bad things and some rants.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
+timezone: Europe/Moscow
 twitter_username: a_kourbatov
 github_username:  alkurbatov
 
