--- a/_config.yml
+++ b/_config.yml
@@ -40,3 +40,11 @@ plugins:
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
+
+defaults:
+  -
+    scope:
+      path: "_posts"
+    values:
+      layout: "post"
+      author: "Alexander Kurbatov"
