--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,13 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 timezone: Europe/Moscow
+
+# Profile links
 twitter_username: a_kourbatov
 github_username:  alkurbatov
+
+# Style
+show_excerpts: true
 
 # Build settings
 markdown: kramdown
