--- a/_config.yml
+++ b/_config.yml
@@ -46,6 +46,11 @@ plugins:
 #   - vendor/gems/
 #   - vendor/ruby/
 
+header_pages:
+  - projects.md
+  - contributions.md
+  - about.md
+
 defaults:
   -
     scope:
