--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,8 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Alkurbatov's blog
+title: Alkurbatov
+author: Alexander Kurbatov
 email: sir.alkurbatov@yandex.ru
 description: >- # this means to ignore newlines until "baseurl:"
   A personal blog about good things, bad things and some rants.
