Enable google analytics, #5

--- a/_config.yml
+++ b/_config.yml
@@ -61,3 +61,5 @@ defaults:
       author: "Alexander Kurbatov"
       excerpt_separator: <!--more-->
       layout: "post"
+
+google_analytics: UA-131413313-1
