--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ email: sir.alkurbatov@yandex.ru
 description: >- # this means to ignore newlines until "baseurl:"
   A personal blog about good things, bad things and some rants.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://alkurbatov.github.io"
 timezone: Europe/Moscow
 
 # Profile links
@@ -33,6 +33,8 @@ markdown: kramdown
 theme: minima
 plugins:
   - jekyll-feed
+  - jekyll-sitemap
+  - jekyll-seo-tag
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
