feat: Refine the pages structure
* Make CV shorter.
* Add the certificates page.
* Unity contributions with projects to save some space.

Signed-off-by: Alexander Kurbatov <Alexander.Kurbatov@acronis.com>

--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,8 @@ plugins:
 
 header_pages:
   - projects.md
-  - contributions.md
+  - certificates.md
+  - publications.md
   - cv.md
   - about.md
 
