chore(vscode): Better spellcheck setup
Signed-off-by: Alexander Kurbatov <Alexander.Kurbatov@acronis.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
-    "spellright.language": "ru",
+    "spellright.language": [
+        "ru",
+        "en"
+    ],
     "spellright.documentTypes": [
         "markdown",
         "latex",
