--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Alkurbatov
-author: Alexander Kurbatov
+author: Aleksandr Kurbatov
 email: sir.alkurbatov@yandex.ru
 description: >- # this means to ignore newlines until "baseurl:"
   A personal blog about good things, bad things and some rants.
@@ -31,6 +31,7 @@ show_excerpts: true
 # Build settings
 markdown: kramdown
 theme: minima
+skin: dark
 plugins:
   - jekyll-feed
   - jekyll-sitemap
@@ -60,7 +61,7 @@ defaults:
     scope:
       path: "_posts"
     values:
-      author: "Alexander Kurbatov"
+      author: "Aleksandr Kurbatov"
       excerpt_separator: <!--more-->
       layout: "post"
 
